<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practice Room Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_details">SongDetailsActivity</string>
    <string name="title_activity_metronome">MetronomeActivity</string>
    <string name="title_activity_rhythm_player">RhythmPlayerActivity</string>
    <string name="status_string">Status: </string>
    <string name="songName">Song Title: </string>
    <string name="performanceName">Performance Name: </string>
    <string name="performDate">Concert Date: </string>
    <string name="slash">/</string>
    <string name="pieceStyle">Style of Piece: </string>
    <string name="timePracticed">Total Time Practiced: </string>
    <string name="curStatus">Current Status: </string>
    <string name="notes">Notes: </string>
    <string name="forString"> For Performance: </string>
    <string name="practiceSectionString">Section to Practice: </string>
    <string name="typeSection">Type of Section:</string>
    <string name="sectionName">Practice Section: </string>
    <string name="sectionType">Section Type: </string>
    <string name="metronomeMenuLabel">Metronome</string>
    <string name="rhythmPlayerMenuLabel">Rhythm Player</string>
    <string name="remindersMenuLabel">Reminders</string>
    <string name="mainMenuMenuLabel">Main Menu</string>
    <string name="optionsMenuLabel">Options</string>
    <string name="deleteSongMenuLabel">Delete Song</string>
    <string name="editSongMenuLabel">Edit Song Details</string>
    <string name="addPracticeMenuLabel">Add Section to Practice</string>
    <string name="addSongMenuLabel">Add Song</string>
    <string name="emptyListReminders">No Reminders Scheduled</string>
    <string name="emptyListSongList">No Songs To Practice</string>
    <string name="reminderDate">Reminder Day: </string>
    <string name="reminderTime">Reminder Time: </string>
    <string name="colonString">:</string>
    <string name="messageReminder">Message: </string>
    <string name="repeatReminder">Repeat: </string>
    <string name="addReminderMenuLabel">Add Reminder</string>
    <string name="dateString">Date: </string>
    <string name="timeString">Time: </string>
    <string name="addWebLink">Add Web Link</string>
    <string name="labelWebPage">Label this Web Page: </string>
    <string name="url">URL: </string>
    <string name="titleString">Title: </string>
    <string name="newRecordingMenu">Make New Recording</string>
    <string name="startRecording">Start recording</string>
    <string name="stopRecording">Stop recording</string>
    <string name="startPlaying">Start playing</string>
    <string name="stopPlaying">Stop playing</string>
    <string name="name">Name: </string>
    <string name="customMessage">Custom Message: </string>
    <string name="dayString">Day: </string>

</resources>
