<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.android.ait.hu.shoppinglist.CreateItemActivity" >
    <item android:id="@+id/action_tools"
        android:title="Tools"
        android:orderInCategory="100"
        android:showAsAction="always">
        <menu>
            <item android:id="@+id/submenu_metronome"
                android:title="@string/metronomeMenuLabel"
                android:orderInCategory="1"
                android:showAsAction="never"/>
            <item android:id="@+id/submenu_reminder"
                android:title="@string/remindersMenuLabel"
                android:orderInCategory="3"
                android:showAsAction="never"
                />
        </menu>
    </item>
    <item android:id="@+id/action_add_new"
        android:title="@string/addSongMenuLabel"
        android:orderInCategory="10"
        android:showAsAction="always" />
</menu>